# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bpo_env"
version = "0.1.0"
description = "BPO Customer Support Resolution Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # OpenAI-compatible client for LLM judge and inference
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
server = "bpo_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["bpo_env", "bpo_env.server", "bpo_env.agent_logic"]
package-dir = { "bpo_env" = ".", "bpo_env.server" = "server", "bpo_env.agent_logic" = "agent_logic" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
